# crypto_primitives

./: .gitignore  Cargo.toml  README.md
benches/: multilinear_poly.rs  poly_ops.rs  univariate_poly.rs
blind_auction/: Cargo.toml
blind_auction/src/: lib.rs
circom_gkr/: .gitignore  Cargo.toml  README.md
circom_gkr/src/: circom_read.rs  cli_functions.rs  constraint_system.rs  cs_to_gkr_cir.rs  lib.rs  main.rs  utility_functions.rs
circom_gkr/src/circom/: package-lock.json  test.circom  test.r1cs
circom_gkr/src/circom_adapter/: circom_read.rs  constraint_rep.rs  constraint_system.rs  cs_to_gkr_cir.rs  mod.rs
elliptic_curves/: Cargo.toml
elliptic_curves/src/: short_weierstrass.rs
fiat_shamir_transcript/: Cargo.toml
fiat_shamir_transcript/src/: lib.rs
fields/: Cargo.toml
fields/src/: arithmetics.rs
fri/: Cargo.toml  README.md
fri/src/: fri.rs  lib.rs
gkr/: Cargo.toml
gkr/src/: circuit.rs  eval_gate.rs  protocol.rs  utils.rs
gkr/src/coeff_form/: circuit.rs  eval_gate.rs  mod.rs  protocol.rs  utils.rs
gkr/src/eval_form/: circuit.rs  layer_poly.rs  mod.rs  protocol.rs  succinct_gkr.rs
kzg/: Cargo.toml  README.md
kzg/src/: lib.rs  trusted_setup.rs
merkle_tree/: Cargo.toml  README.md
merkle_tree/src/: lib.rs
multilinear_kzg/: Cargo.toml  README.md
multilinear_kzg/src/: lib.rs  trusted_setup.rs
noice/elliptic_curves/: arithmetics.rs
noice/fields/: arithmetics.rs  mod.rs
polynomials/: Cargo.toml
polynomials/src/: lib.rs
polynomials/src/multilinear_polynomial/: coef_form.rs  composed_poly.rs  eval_form.rs  mod.rs  traits.rs
polynomials/src/multilinear_polynomial/universal_mle/: mod.rs  ops.rs  universal_mle.rs
polynomials/src/univariate_polynomial/: mod.rs
polynomials/src/utils/: mod.rs
reed_solomon_fingerprinting/: Cargo.toml  README.md
reed_solomon_fingerprinting/src/: lib.rs  reed_solomon.rs
src/: lib.rs  main.rs  miller_rabbin.rs
src/circom_gkr/: circom_read.rs  constraint_rep.rs  constraint_system.rs  cs_to_gkr_cir.rs  mod.rs
src/circom_gkr/circom/: package.json  test.circom  test.r1cs  test.sym  test_constraints.json
src/elliptic_curves/: arithmetics.rs  mod.rs  short_weierstrass.rs
src/fiat_shamir_transcript/: transcript.rs
src/fields/: arithmetics.rs
src/gkr/: circuit.rs  eval_gate.rs  mod.rs  protocol.rs  utils.rs
src/inner_product_argument/: inner_product_argument.rs  mod.rs
src/offline_memory_checking/: mod.rs  offline_memory_checking.rs
src/polynomials/: multilinear_poly.rs  polynomial.rs  univariate_poly.rs
src/sumcheck/: interactive_sumcheck.rs  non_interactive_sumcheck.rs  prover.rs  verifier.rs
src/utils/: mod.rs
sumcheck/: Cargo.toml
sumcheck/src/: interactive_sumcheck.rs  lib.rs  non_interactive_sumcheck.rs  prover.rs  verifier.rs
sumcheck/src/coeff_form/: interactive_sumcheck.rs  mod.rs  non_interactive_sumcheck.rs  prover.rs  verifier.rs
sumcheck/src/eval_form/: mod.rs  protocol.rs  prover.rs  verifier.rs
sumcheck/src/universal_mle/: mod.rs  universal_mle.rs
utils/: Cargo.toml
utils/src/: lib.rs
