workspace = { members = [ "circom_gkr", "elliptic_curves", "fiat_shamir_transcript", "fields", "gkr", "polynomials", "reed_solomon_fingerprinting", "sumcheck", "utils"] }
[package]
name = "crypto_primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.2"
ark-poly = "0.4.2"
polynomials = {path = "polynomials"}


[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "univariate_poly"
harness = false

[[bench]]
name = "multilinear_poly"
harness = false
