[package]
name = "circom_gkr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-ff = "0.4.2"
ark-std = "0.4.0"
serde_json = "1.0.114"
polynomials = {path = "../polynomials"}
gkr = {path = "../gkr"}
