[package]
name = "circom_gkr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-ff = "0.4.1"
ark-std = "0.4.0"
serde_json = "1.0.114"
clap = { version = "4.5.4", features = ["derive"] }
polynomials = { version = "0.1.0", path = "../polynomials" }
gkr = { version = "0.1.0", path = "../gkr" }
ark-serialize = { version = "0.4.1", features = ["derive"] }
hex = "0.4.3"
ark-circom = "0.1.0"
