[package]
name = "kzg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
polynomials = { version = "0.1.0", path = "../polynomials" }
sha2 = "0.10.8"


