[package]
name = "polynomials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ff = "0.4.1"
ark-serialize = { version = "0.4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.4"
